syntax = "proto3";
package etl_grpc.simplestore.bytes_store;
import "etl_grpc/basetypes/simplestore_error.proto";
import "etl_grpc/simplestore/bytes_store.proto";

message ObserveAllRequest {
}

message ObserveKeyRequest {
  string key = 1;
}

service ObservableBytesStore {
  rpc Load(LoadRequest) returns (LoadResponse) {}
  rpc Write(WriteRequest) returns (WriteResponse) {}
  rpc ObserveKey(ObserveKeyRequest) returns (stream LoadResponse) {}
  rpc ObserveAll(ObserveAllRequest) returns (stream LoadResponse) {}
}
